style.css
/* global variables */
:root {
	--soft-cyan: hsl(174, 77%, 80%); /*(Full Slider Bar) */
	--strong-cyan: hsl(174, 86%, 45%); /*(Slider Backround)*/
	--light-grayish-red: hsl(14, 92%, 95%); /*(Discount Background)*/
	--light-red: hsl(15, 100%, 70%); /* (Discount Text)*/
	--pale-blue: hsl(226, 100%, 87%); /*(CTA Text)*/
	--white: hsl(0, 0%, 100%); /*(Pricing Component Background)*/
	--light-grayish-blue: hsl(223, 50%, 87%); /*(Toggle Background) */
	--light-grayish-blue: hsl(224, 65%, 95%); /*(Empty Slider Bar)*/
	--grayish-blue: hsl(225, 20%, 60%); /*(Text)*/
	--dark-desaturated-blue: hsl(227, 35%, 25%); /*(Text & CTA Background)* */
	--very-pale-blue: hsl(230, 100%, 99%); /* (Main Background)*/
}

/*global styles */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-size: 16px;
}

/* Typography */
body,
button {
	font-family: "Manrope", sans-serif;
	background-color: var(--very-pale-blue);
}

/* header section */
header {
	height: 45vh;
	background-color: yellow;
	/* background-image: url(./images/bg-pattern.svg); */
	position: relative;
}

/* TODO: why is the intro margin pushing the background image of the header down??  */
.intro {
	padding-top: 2rem;
	height: 60%;
	background: content-box no-repeat center url(./images/pattern-circles.svg);
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.intro h1 {
	font-size: 1.25rem;
	font-weight: 800;
	line-height: 2rem;
	color: var(--dark-desaturated-blue);
}

.intro p {
	line-height: 1.5rem;
	font-size: 0.9rem;
}

/* info card section */
.info-card {
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 15rem;
	border: 1px solid black;
	height: 60%;
	margin: 1.5rem;
	background-color: var(--white);
	z-index: 1;
}

